# AuraCore

./: .cursorrules  .dockerignore  .env.example  .eslintignore  .gitignore  .rebuild-trigger  AGGRID_TRIAL_RESUMO.md  AG_GRID_FILTROS_PLANEJAMENTO.md  AG_GRID_SOLUCAO_FINAL.md  ANALISE_CENTROS_DE_CUSTO.md  ANALISE_CRITICA_ERRO_IMPORTACAO.md  ANÁLISE_REPOSITÓRIO_CARGAS.md  ANÁLISE_SENIOR_AURACORE.md  APLICACAO_AURORA_CARDS_GRIDS.md  APPLY_ADVANCED_FILTERS.md  AUDITORIA_PLANO_CONTAS_AURA_CORE.md  AURACORE_COGNITIVE_ENTERPRISE_ARCHITECTURE_V1.md  AURORA_APLICACAO_FINAL.md  AURORA_CARDS_GRIDS_RELATORIO_FINAL.md  AURORA_PREMIUM_GRID_SHOWCASE.md  AURORA_REVISAO_TELAS_ADICIONAIS.md  AURORA_RODADA_2_RELATORIO_FINAL.md  AUTENTICACAO_CORRIGIDA.md  BENCHMARK_ESTRUTURA_CONTABIL_FISCAL.md  BRANCH_SWITCHER_DEBUG.md  BTG_CHECKLIST_FINAL.md  BTG_CONFIGURACAO_COMPLETA.md  BTG_ENV_VARS.txt  BTG_PLANO_DE_TESTES.md  BUGFIX_BUG1_BUG2_REPORT.md  BUGFIX_NEXT_PWA_CONFIG.md  BUGFIX_RACE_CONDITION_REPORT.md  BUG_FIX_CONSOLE_LOG.md  CACHE_WARMING.md  CLAUDE.md  COMANDOS_TERMINAL_IMPORTACAO.md  COMANDO_RAPIDO_DIAGNOSTICO.md  COMO_SALVAR_E_FECHAR_CURSOR.md  CONFIGURATION.md  CONFIRMACAO_AMBIENTE_HOMOLOGACAO.md  (+136 more)
agents/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Dockerfile.docling  Makefile  README.md  docker-compose.coolify.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini
agents/docs/: PROJECT_SUMMARY.md
agents/docs/api/: README.md  webhooks.md
agents/docs/architecture/: README.md
agents/docs/architecture/adr/: 001-fastapi.md
agents/docs/deployment/: README.md
agents/docs/sdk/: python.md
agents/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  pdb.yaml  pvc-data.yaml  secret.yaml.template  service.yaml  serviceaccount.yaml
agents/scripts/: deploy.sh  index_legislation.py  migrate.sh  run_scheduler.py  run_tests.sh  run_worker.sh
agents/sdk/python/: README.md  pyproject.toml
agents/sdk/python/auracore/: __init__.py  cli.py  client.py  config.py  exceptions.py  types.py
agents/sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
agents/sdk/typescript/src/: client.ts  config.ts  errors.ts  index.ts  types.ts
agents/sdk/typescript/tests/: client.test.ts
agents/src/: __init__.py  config.py  main.py
agents/src/agents/: __init__.py  accounting.py  crm.py  financial.py  fiscal.py  fleet.py  qa.py  strategic.py  tms.py
agents/src/api/: __init__.py  analytics.py  audit.py  auth.py  cache.py  health.py  integrations.py  knowledge.py  locales.py  observability.py  openapi.py  push.py  tasks.py  voice.py  webhooks.py
agents/src/api/routes/: __init__.py  agents.py  chat.py  health.py
agents/src/core/: __init__.py  base.py  guardrails.py  health.py  observability.py  orchestrator.py
agents/src/integrations/: __init__.py  auracore_client.py  mcp_bridge.py
agents/src/middleware/: __init__.py  audit.py  auth.py  locale.py  rate_limit.py
agents/src/services/: __init__.py
agents/src/services/analytics/: __init__.py  analytics_service.py  event_tracker.py  events.py  usage_aggregator.py
agents/src/services/audit/: __init__.py  audit_events.py  audit_service.py  audit_storage.py  compliance.py
agents/src/services/auth/: __init__.py  api_key.py  audit.py  jwt_service.py  password.py  permissions.py
agents/src/services/cache/: __init__.py  cache_keys.py  decorators.py  redis_cache.py
agents/src/services/document_processing/: __init__.py  dacte_extractor.py  danfe_extractor.py  docling_processor.py
agents/src/services/i18n/: __init__.py  locales.py  messages.py  translator.py
agents/src/services/integrations/: __init__.py  base.py  integration_hub.py
agents/src/services/knowledge/: __init__.py  document_indexer.py  embedding_service.py  rag_pipeline.py  vector_store.py
agents/src/services/pwa/: __init__.py  push_notifications.py  subscription_manager.py
agents/src/services/tasks/: __init__.py  task_definitions.py  task_queue.py  task_scheduler.py  task_worker.py
agents/src/services/voice/: __init__.py  speech_to_text.py  text_to_speech.py  voice_processor.py
agents/src/services/webhooks/: __init__.py  webhook_delivery.py  webhook_events.py  webhook_service.py
agents/src/tools/: __init__.py
agents/src/tools/accounting/: __init__.py  account_reconciliation.py  journal_entry_generator.py  period_closing.py
agents/src/tools/crm/: __init__.py  customer_health.py  lead_scorer.py  proposal_generator.py
agents/src/tools/financial/: __init__.py  forecast_cashflow.py  reconcile_bank.py  suggest_payments.py
agents/src/tools/fiscal/: __init__.py  calculate_icms.py  check_nfe.py  document_importer.py  (+4 more)
agents/tests/: __init__.py  conftest.py
agents/tests/agents/: __init__.py  test_fiscal_agent.py  test_orchestrator.py
agents/tests/api/: __init__.py  test_voice_api.py
agents/tests/e2e/: __init__.py  test_agents_api.py  test_analytics_api.py  test_audit_api.py  test_rag_api.py  test_voice_api.py
agents/tests/fixtures/: __init__.py  agents.py  auth.py  documents.py
agents/tests/integration/: __init__.py  test_agent_flow.py  test_document_processing.py
agents/tests/load/: __init__.py  test_api_load.py
agents/tests/services/: __init__.py  test_document_processing.py  test_knowledge.py  test_voice_services.py
agents/tests/unit/: test_agents.py
(+3697 files in other folders)
