[project]
name = "auracore-agents"
version = "2.0.0"
description = "AI Agents for AuraCore ERP - Logistics Enterprise System"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "AuraCore Team", email = "dev@auracore.cloud"}
]

dependencies = [
    # Agno Framework
    "agno>=1.0.0",
    
    # LLM
    "anthropic>=0.18.0",
    
    # API
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Database
    "chromadb>=0.4.22",
    
    # Cache
    "redis>=5.0.0",
    
    # Observability
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "prometheus-client>=0.19.0",
    "structlog>=24.1.0",
    
    # Utils
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    
    # Document Processing - Docling (IBM)
    "docling>=2.0.0",
    "docling-core>=2.0.0",
    
    # PDF Processing
    "pypdf>=4.0.0",
    "pillow>=10.0.0",
    
    # Google Cloud Speech (Voice Interface)
    "google-cloud-speech>=2.21.0",
    "google-cloud-texttospeech>=2.14.0",
    
    # Audio Processing
    "pydub>=0.25.1",
    "soundfile>=0.12.1",
    
    # RAG / Knowledge Base - Embeddings
    "openai>=1.0.0",
    
    # Auth
    "PyJWT>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    
    # PWA / Push Notifications
    "pywebpush>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "respx>=0.20.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

# Para usar embeddings locais ao invés de OpenAI
local-embeddings = [
    "sentence-transformers>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: Unit tests (fast, no external deps)",
    "integration: Integration tests (may need external services)",
    "slow: Slow tests (skip with -m 'not slow')",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
